tests/More/Good/14.tig
/* function declaration */
let
	function foo(x:int):int = 5 
in
	foo(1)
end
