tests/More/Bad/6.tig
/* Type mismatch */
let 
	function barf(x:int) : int = 0
in
	barf("zoinks!")
end


